--- a/index.html
+++ b/index.html
@@ -997,7 +997,8 @@
     </div>
     <script type="text/javascript">
       var uri = window.location;
-      document.getElementById('nextpage').value = uri.protocol + '//' + uri.host + '/p/cadastro-obrigado.html';
+      var page = document.getElementById('nextpage').innerText;
+      document.getElementById('nexturl').value = uri.protocol + '//' + uri.host + page;
     </script>
     
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
