renovados os diretorios

--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
     <script src="themes/pillar/plugins/scrollreveal/js/scrollreveal.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/maskedinput/js/jquery.maskedinput_1.4.1.min.js" type="text/javascript"></script>
     <script src="themes/pillar/js/scripts.js" type="text/javascript"></script>
-    <script src="themes/pillar/js/formularios_html.1.2.4.js" type="text/javascript"></script>
+    <script src="js/formularios_html.1.2.4.js" type="text/javascript"></script>
     <script src="themes/pillar/js/related-cards.1.2.0.js" type="text/javascript"></script>
   </body>
 </html>
