--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="Dinheiro"><i class="fa fa-dollar icon-left"></i> Dinheiro</label>
+                      <label class="h6 mx-0" for="Dinheiro"><i class="iconsmind-fa-Dollar icon--left"></i> Dinheiro</label>
                     </div>
                   </div>
 
@@ -449,7 +449,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="CartaoCredito"><i class="fa fa-credit-card icon-left"></i> Cartão de Crédito</label>
+                      <label class="h6 mx-0" for="CartaoCredito"><i class="iconsmind-fa-Credit-Card icon--left"></i> Cartão de Crédito</label>
                     </div>
                   </div>
 
@@ -461,7 +461,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="CartaoDebito"><i class="fa fa-credit-card fa-flip-horizontal icon-left"></i> Cartão de Débito</label>
+                      <label class="h6 mx-0" for="CartaoDebito"><i class="iconsmind-fa-Credit-Card fa-flip-horizontal icon--left"></i> Cartão de Débito</label>
                     </div>
                   </div>
 
@@ -473,7 +473,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="Pix"><i class="icos-pix icon-left"></i> Pix</label>
+                      <label class="h6 mx-0" for="Pix"><i class="iconsmind-fa-Pix icon--left"></i> Pix</label>
                     </div>
                   </div>
 
@@ -485,7 +485,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="PicPay"><i class="icos-picpay icon-left"></i> PicPay</label>
+                      <label class="h6 mx-0" for="PicPay"><i class="iconsmind-fa-Picpay icon--left"></i> PicPay</label>
                     </div>
                   </div>
 
@@ -497,7 +497,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="MercadoPagoQRCode"><i class="fa fa-qrcode icon-left"></i> MercadoPago QR Code</label>
+                      <label class="h6 mx-0" for="MercadoPagoQRCode"><i class="iconsmind-fa-QR-Code icon--left"></i> MercadoPago QR Code</label>
                     </div>
                   </div>
 
@@ -509,7 +509,7 @@
                       </div>
                     </div>
                     <div class="col-xs-10">
-                      <label class="h6 mx-0" for="PagamentosOnline"><i class="fa fa-paypal icon-left"></i> Pagamentos Online</label>
+                      <label class="h6 mx-0" for="PagamentosOnline"><i class="iconsmind-fa-Bitcoin icon--left"></i> Pagamentos Online</label>
                     </div>
                   </div>
 
@@ -784,15 +784,16 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="elements--title">
-                <h5>Seu card de apresentação do Ewbank Online: </h5>
+                <h4>Resultado: </h4>
+                <h6>Seu cartão de apresentação ficará assim:</h6>
               </div>
             </div>
-            <div id="card__demo" class="col-sm-6 col-md-4">
+            <div id="card__demo" class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
             </div>
             <div class="col-sm-12">
               <div class="elements-forms">
                 <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 col-sm-offset-3">
                     <form action="https://formsubmit.co/bd9867ea04579f11d4778701553dbbbe" method="POST">
                       <!-- Form Submit Honeypot -->
                       <input type="text" name="_honey" style="display: none">
@@ -810,6 +811,13 @@
                       <textarea id="messageform" name="message" class="" style="display: none;"></textarea>
                     </form>
                   </div>
+                </div>
+                <div class="row pagination-container">
+                  <div class="col-xs-6">
+                    <a href="#section0" class="inner-link next">
+                      <span class="h6"><i class="iconsmind-Left"></i> modificar</span>
+                    </a>
+                  </div>                  
                 </div>
               </div>
             </div>
