--- a/form.html
+++ b/form.html
@@ -15,11 +15,14 @@
     <div class="container">
       <div class="row">
         <form action="https://formsubmit.co/bd9867ea04579f11d4778701553dbbbe" method="POST">
-          <div class="col-md-6">
+          <div class="col-md-12 form-group">
             <input type="text" name="name">
           </div>
-          <div class="col-md-6 input-group">
-            <button type="button" class="btn btn-large btn-block btn-default">enviar</button>
+          <div class="col-md-12">
+            <textarea name="message" rows="8" style="width: 100%"></textarea>
+          </div>
+          <div class="col-md-12 form-group input-group">
+            <button type="button" class="btn btn-large btn-block">enviar</button>
           </div>
         </form>
       </div>
