--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
             <textarea name="message" rows="8" style="width: 100%"></textarea>
           </div>
           <div class="col-md-12 form-group input-group">
-            <button type="button" class="btn btn-large btn-block">enviar</button>
+            <button type="submit" class="btn btn-large btn-block">enviar</button>
           </div>
         </form>
       </div>
