--- a/form.html
+++ b/form.html
@@ -23,11 +23,11 @@
           <input type="hidden" name="_next" value="https://mercadoslocais.github.io/formsubmit/pageok.html">
 
           <div class="col-md-12 form-group">
-            <label for="Nome"></label>
+            <label for="Nome">Nome</label>
             <input type="text" name="name" value="Nome">
-          </div>          
+          </div>
           <div class="col-md-12">
-            <label for="Mensagem"></label>
+            <label for="Mensagem">Mensagem</label>
             <textarea name="message" rows="8" style="width: 100%"></textarea>
           </div>
           <div class="col-md-12 form-group input-group">
