--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
           <!-- CAPTCHA -->
           <input type="hidden" name="_captcha" value="false">
           <!-- REDIRECT -->
-          <input type="hidden" name="_next" value="https://mercadoslocais.github.io/formsubmit/pageok.html">
+          <input type="hidden" name="_next" value="">
 
           <div class="col-md-12 form-group">
             <label for="Nome">Nome</label>
@@ -38,6 +38,9 @@
     </div>
 
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $('[name="_next"]').val('https://mercadoslocais.github.io/formsubmit/pageok.html');
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/lightbox/js/lightbox.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/smooth-scroll/js/smooth-scroll.min.js" type="text/javascript"></script>
