--- a/form.html
+++ b/form.html
@@ -39,7 +39,10 @@
 
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      $('[name="_next"]').val('https://mercadoslocais.github.io/formsubmit/pageok.html');
+      var mr = $('[name="_next"]').val();
+      console.log(mr);
+      mr = 'https://mercadoslocais.github.io/formsubmit/pageok.html';
+      console.log(mr);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/lightbox/js/lightbox.min.js" type="text/javascript"></script>
