--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
-		<title>Cadastros - Estabelecimento</title>
+		<title>formsubmit - testes</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
             <label for="Mensagem">Mensagem</label>
             <textarea name="message" rows="8" style="width: 100%"></textarea>
           </div>
-          <div class="col-md-12 form-group input-group">
+          <div class="col-md-12 form-group">
             <button type="submit" class="btn btn-large btn-block">enviar</button>
           </div>
         </form>
