--- a/form.html
+++ b/form.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <div class="row">
+        <span id="nextpage" style="display: none">/pageok.html</span>
         <form action="https://formsubmit.co/bd9867ea04579f11d4778701553dbbbe" method="POST">
           <!-- HONEYPOT -->
           <input type="text" name="_honey" style="display: none">
@@ -39,10 +40,10 @@
 
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      var mr = $('[name="_next"]').val();
-      console.log(mr);
-      mr = 'https://mercadoslocais.github.io/formsubmit/pageok.html';
-      console.log(mr);
+      var nextpage = $('#nexpage').text();
+      uri = window.location;
+      $('input[name="_next"]').val(uri.protocol + '//' + uri.host + nextpage);
+      // console.log(a)
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/lightbox/js/lightbox.min.js" type="text/javascript"></script>
