--- a/index.html
+++ b/index.html
@@ -814,10 +814,10 @@
                 </div>
                 <div class="row pagination-container">
                   <div class="col-xs-6">
-                    <a href="#section0" class="inner-link next">
+                    <a href="#section0" class="inner-link">
                       <span class="h6"><i class="iconsmind-Left"></i> modificar</span>
                     </a>
-                  </div>                  
+                  </div>
                 </div>
               </div>
             </div>
@@ -1003,13 +1003,14 @@
       </span>
 
     </div>
-    <script type="text/javascript">
-      var uri = window.location;
-      var page = document.getElementById('nextpage').innerText;
-      document.getElementById('nexturl').value = uri.protocol + '//' + uri.host + page;
-    </script>
 
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      var uri = window.location;
+      var page = $('#nextpage').text();
+      $('#nexturl').val(uri.protocol + '//' + uri.host + page);
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/lightbox/js/lightbox.min.js" type="text/javascript"></script>
     <script src="themes/pillar/plugins/smooth-scroll/js/smooth-scroll.min.js" type="text/javascript"></script>
