--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
 
     <script src="themes/pillar/plugins/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      var nextpage = $('#nexpage').text();
+      var nextpage = $('#nextpage').text();
       uri = window.location;
       $('input[name="_next"]').val(uri.protocol + '//' + uri.host + nextpage);
       // console.log(a)
