--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <span id="nextpage" style="display: none">/pageok.html</span>
+        <span id="nextpage" style="display: none">/formsubmit/pageok.html</span>
         <form action="https://formsubmit.co/bd9867ea04579f11d4778701553dbbbe" method="POST">
           <!-- HONEYPOT -->
           <input type="text" name="_honey" style="display: none">
