--- a/index.html
+++ b/index.html
@@ -10,27 +10,7 @@
 		<link rel="stylesheet" href="themes/pillar/plugins/lightbox/css/lightbox.min.css">
 		<link rel="stylesheet" href="themes/pillar/css/custom.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700%7CMontserrat:400,700">
-
-    <style>
-      section {
-        transition: opacity ease-in-out 1000ms;
-      }
-      .prev span, .next span {
-        font-weight: 700;
-      }
-      .horarios select {
-        margin-bottom: 0.625em;
-        height: 36px;
-        padding-top: 0;
-        padding-bottom: 0;
-      }
-      .horarios {
-        transition: height ease-in-out 1500ms;
-      }
-      #card__demo .card {
-        box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.075);
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body style="overflow: _hidden" class="bg--white" _data-reveal-selectors="section" _data-reveal-timing="1000" >
 
@@ -794,14 +774,15 @@
               <div class="elements-forms">
                 <div class="row">
                   <div class="col-sm-6 col-sm-offset-3">
+                    <span id="nextpage" style="display: none">/formsubmit/pageok.html</span>
                     <form action="https://formsubmit.co/bd9867ea04579f11d4778701553dbbbe" method="POST">
                       <!-- Form Submit Honeypot -->
                       <input type="text" name="_honey" style="display: none">
                       <!-- Form Submit Captcha -->
                       <input type="hidden" name="_captcha" value="false">
                       <!-- Form Submit Redirect (Next) -->
-                      <span id="nextpage" style="display: none;">/p/cadastro-obrigado.html</span>
-                      <input id="nexturl" type="hidden" name="_next" value="">
+
+                      <input type="hidden" name="_next" value="">
 
                       <input id="nameform" type="hidden" name="name">
                       <input id="emailform" type="hidden" name="email">
@@ -1008,7 +989,7 @@
     <script type="text/javascript">
       var uri = window.location;
       var page = $('#nextpage').text();
-      $('#nexturl').val(uri.protocol + '//' + uri.host + page);
+      $('input[name="_next"]').val(uri.protocol + '//' + uri.host + page);
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" type="text/javascript"></script>
